# ssce-tauri

./: .env.sample  .gitignore  CHEAT_SHEET.md  CI-CD-GITHUB_ACTIONS.md  CLAUDE.md  COMMIT_MESSAGE.txt  HISTORY.md  ICON_SPECS.md  MIGRATION_TO_TAURI.md  Plan-1-3-0.md  README.md  USER_DOCUMENTATION.md  build-and-install.sh  error1.txt  generate-tray-icons.sh  package.json  playwright.config.js
.github/workflows/: release.yml  test.yml
src/: USER_DOCUMENTATION.md  help.html  index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/config/: defaults.js  defaults.json
src/css/: app.css  md-github.css
src/js/: app.js  canvas.js  clipboard.js  drag-drop.js  file-operations.js  keyboard.js  layers.js  ssce-file-ops.js  state.js  tauri-bridge.js
src/js/components/: snapshot-carousel.js
src/js/tools/: arrow.js  borders.js  combine.js  crop.js  cut.js  fade-edges.js  fill.js  highlight.js  line.js  select.js  shape.js  steps.js  symbols.js  text.js
src/js/ui/: colour-palette.js  toolbar.js
src/js/ui/components/: button-group.js  colour-picker.js  slider.js
src/js/ui/dialogs/: about-dialog.js  alert-confirm.js  bulk-export-dialog.js  colour-dialogs.js  file-dialogs.js  image-dialogs.js  index.js  recent-files-dialog.js  search-library-dialog.js  settings-dialog.js  ssce-dialogs.js  tool-dialogs.js
src/js/ui/property-cards/: arrow-card.js  base-card.js  borders-card.js  fill-card.js  highlight-card.js  index.js  line-card.js  (+4 more)
src/js/utils/: autosave.js  bulk-export.js  canvas-background.js  canvas-resize-handles.js  colours.js  config.js  drag-handles.js  draggable-panel.js  export.js  image-ops.js  recent-files.js  rect-detect.js  smart-guides.js  snapshot-viewer-export.js  spinner.js  ssce-format.js  toast.js  zoom.js
tests/e2e/: serve.js  smoke.spec.js
tests/unit/: bulk-export.test.js  canvas-resize.test.js  colours.test.js  config.test.js  export.test.js  rect-detect.test.js  smart-guides.test.js  ssce-format.test.js
