[package]
name = "ssce-desktop"
version = "1.3.0"
description = "SSCE Desktop - Screen Capture Editor"
authors = ["SSCE Project <noreply@ssce.local>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "image-png", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
# tauri-plugin-single-instance = "2"  # TODO: Causes window controls to stop working - investigate later
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
